@@ -27,7 +27,6 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Path("v1/Consent")
 public class ConsentResource {
@@ -93,7 +92,7 @@ public class ConsentResource {
         return entities
                 .stream()
                 .map(e -> ConsentEntityConverter.toFhir(e, fhirReferenceURL))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @GET
